# ODM-Import

./: .gitignore  MANIFEST.in  ODM.drawio  app.py  environment.yml  excel_to_db.py  import-modeleau_lab_data.ipynb  lab_data.ipynb  lab_data.py  labels.yaml  mapbox_zoom.csv  modeleau_lab_data.py  notes.txt  odm.py  odm_import.ipynb  odm_view.ipynb  pipelines-2022.py  pipelines-config-mi.yaml  pipelines-config.yaml  pipelines-config2022.yaml  pipelines-mi.py  pipelines.py  pyproject.toml  readme.md  requirements.txt  scratch.ipynb  scratch_mi.ipynb  setup.py  site_measure_data.ipynb  test  test_data.csv  types.json  visualization_helpers.py  visualizations.py  wbe_odm.drawio
.devcontainer/: Dockerfile  devcontainer.json
.ipynb_checkpoints/: import-checkpoint.ipynb  j-checkpoint.json
Data/: Covid-WW-Ouest.csv  INSPQ_Public_Merge-20210115.csv  Template - Data Model - 20210127.xlsx  Ville de Quebec - All data.xlsx  Ville de Québec 202102.xlsx  WBE.db  covid-WW-EAST.csv
assets/: typography.css
config/: __init__.py
notebooks/: combined_datasets_test.ipynb  figs_from_mcgill_compil.ipynb  geo_data.ipynb  geo_test.py  import-VdQ_data.ipynb  import-modeleau_lab_data.ipynb  inspq.ipynb  mc_val.ipynb  mcgill_sheet.ipynb  odm_generate_type.ipynb  odm_view.ipynb  plottling.py  public_health_data.ipynb  site_measure_data.ipynb  test.ipynb
odm/: constants.py  mappers.py  odm.py  setup.py  table_parsers.py  utilities.py  visualization_helpers.py
pipelines/: pipelines.py  pipelines.yaml
tests/: test_odm.py  test_utilities.py  test_wbe_odm.py  test_wbe_odm.py.bak
viz_app/: app.py
wbe_odm/: launch.json  odm.py  setup.py  utilities.py  (+1 more)
(+77 files in other folders)
