[project]
name = "ODM-Import"
version = "0.1.0"
description = ""
authors = [
    {name = "jeandavidt", email = "jeandavidt@gmail.com"},
]
dependencies = [
    "geojson",
    "geos",
    "numpy",
    "pandas==1.2.5",
    "openpyxl",
    "plotly",
    "pygeoif",
    "pyproj",
    "shapely",
    "sqlalchemy",
    "unidecode",
    "geomet",
    "pyyaml",
    "easydict",
    "requests",
    "geojson-rewind>=1.0.2"]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
[tool]
[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=4.0.1",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
